--- a/styles/style.css
+++ b/styles/style.css
@@ -9,13 +9,17 @@ html {
 }
 
 .page {
+  display: flex;
   inline-size: 1200px;
   block-size: 100%;
+  justify-content: center;
+  align-items: center;
   margin: auto;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  position: relative;
 }
 
 h1,
@@ -35,4 +39,345 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  align-items: end;
+  justify-content: space-between;
+  row-gap: 30px;
+  inline-size: 1140px;
+  min-block-size: 534px;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  inline-size: 711px;
+  min-block-size: 456px;
+  gap: 16px;
+}
+
+.result__video-container {
+  display: flex;
+  inline-size: 100%;
+  block-size: 386px;
+  inset: 0;
+  position: relative;
+}
+
+.result__video {
+  inline-size: 100%;
+  block-size: 100%;
+  object-fit: cover;
+}
+
+.search-form {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+  inline-size: 100%;
+  min-block-size: 54px;
+  font-size: 18px;
+}
+
+.search-form__fieldset {
+  display: flex;
+  flex-direction: column;
+  block-size: 100%;
+  border: none;
+  gap: 5px;
+}
+
+.search-form__fieldset-title {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.6px;
+  font-family: inherit;
+}
+
+.search-form__label {
+  display: flex;
+  position: relative;
+  width: fit-content;
+  cursor: pointer;
+  gap: 7px;
+}
+
+.search-form__label:hover > .search-form__label-text {
+  text-decoration: underline;
+}
+
+.search-form__label:active > .search-form__textfield{
+  outline: 1px solid #fff;
+  outline-offset: 0;
+}
+
+.search-form__label:focus {
+  outline: none;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form__label-text {
+  font-size: 18px;
+  color: #fff;
+  font-weight: 400;
+  line-height: 21.6px;
+  font-family: inherit;
+}
+
+.search-form__textfield {
+  inline-size: 225px;
+  block-size: 27px;
+  background-color: transparent;
+  border: none;
+  border-block-end: 1px solid #fff;
+  border-block-start: 1px solid #fff;
+  color: #fff;
+  font-family: inherit;
+  font-size: 18px;
+  font-weight: 400;
+  border-radius: 0;
+  appearance: none;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__textfield::placeholder {
+  font-size: 18px;
+  color: #fff;
+  font-weight: 400;
+  line-height: 21.6px;
+  font-family: inherit;
+  opacity: 70%;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  flex-direction: row;
+  gap: 13px;
+  cursor: pointer;
+  inline-size: 100%;
+}
+
+.search-form__checkbox {
+  -webkit-appearance:none;
+  appearance: none;
+}
+
+.search-form__pseudo-checkbox {
+  display: block;
+  cursor: pointer;
+}
+
+.search-form__pseudo-checkbox::before {
+  content: "";
+  display: block;
+  inline-size: 19px;
+  block-size: 19px;
+  border: 1px solid #fff;
+  position: relative;
+  inset-block-start: 1px;
+  inset-inline-start: 1px;
+  z-index: 1;
+}
+
+.search-form__pseudo-checkbox::after {
+  content: "";
+  display: block;
+  inline-size: 15px;
+  block-size: 15px;
+  background-color: #fff;
+  position: absolute;
+  inset-block-start: 3px;
+  inset-inline-start: 3px;
+  z-index: 2;
+  opacity: 0;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  opacity: 1;
+}
+
+.search-form__checkbox:focus-visible + .search-form__pseudo-checkbox::after {
+  opacity: 0;
+}
+
+.button {
+  padding: 0;
+  font-weight: 700;
+  color: #fff;
+  background-color: transparent;
+  border: 1px solid #fff;
+  font-family: inherit;
+  font-size: 18px;
+}
+
+button:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+button:active {
+  background-color: #545050;
+  text-decoration: none;
+}
+
+button:focus {
+  outline: none;
+}
+
+button:focus-visible {
+  border: 1px solid #fff;
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form__submit-button {
+  margin-block-start: 21px;
+  inline-size: 194px;
+  block-size: 34px;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.content__details {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  inline-size: 399px;
+  min-block-size: 534px;
+}
+
+.title {
+  font-family: 'Oswald', sans-serif;
+  font-size: 75px;
+  font-weight: 700;
+  line-height: 70.5px;
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__list {
+  display: flex;
+  flex-direction: column;
+  inline-size: 100%;
+  block-size: 298px;
+  overflow-y: auto;
+  color: #fff;
+  position: relative;
+  box-sizing: border-box;
+}
+
+.content__list::-webkit-scrollbar {
+  inline-size: 5px;
+  block-size: 0;
+}
+
+.content__list::-webkit-scrollbar-thumb {
+  background-color: #545050;
+  border-radius: 5px;
+  block-size: 10px;
+}
+
+.content__list-item {
+  inline-size: 100%;
+  block-size: 107px;
+}
+
+li:not(:first-child) {
+  margin-block-start: 30px;
+}
+
+.content__card-link {
+  display: block;
+  text-decoration: none;
+  color: #fff;
+  block-size: 100%;
+  inline-size: 100%;  
+  margin: 2px;
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 5px;
+}
+
+.content__card-link_current {
+  display: block;
+  inline-size: 100%;
+  block-size: 100%;
+  background-color: #545050;
+}  
+
+.content__card-link:active {
+  background-color: #545050;
+  text-decoration: none;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+}
+
+.content__video-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 3px 0 3px 1px;
+  block-size: 100%;
+}
+
+.content__video-card-description-container {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.content__video-card-title {
+  font-family: 'Oswald', sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
+.content__video-card-description {
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 16.2px;
+}
+
+.content__video-card-thumbnail {
+  inline-size: 194px;
+  block-size: 100%;
+}
+
+.more-button {
+  inline-size: 399px;
+  block-size: 34px;
+  margin: 2px 0 0 2px;
 }
