--- a/styles/style.css
+++ b/styles/style.css
@@ -212,13 +212,13 @@ ol {
 }
 
 .button {
-  padding: 0;
   font-weight: 700;
   color: #fff;
   background-color: transparent;
   border: 1px solid #fff;
   font-family: inherit;
   font-size: 18px;
+  margin: 2px;
 }
 
 button:hover {
@@ -294,14 +294,19 @@ button:focus-visible {
 
 .content__list::-webkit-scrollbar-thumb {
   background-color: #545050;
-  border-radius: 5px;
+  border-radius: 4px;
   block-size: 10px;
 }
 
 .content__list-item {
+  display: block;
   inline-size: 100%;
   block-size: 107px;
   margin-block-end: 30px;
+}
+
+li:nth-last-child(1) {
+  margin-block-end: 0;
 }
 
 .content__card-link {
@@ -309,7 +314,7 @@ button:focus-visible {
   text-decoration: none;
   color: #fff;
   block-size: 100%;
-  inline-size: 100%;  
+  inline-size: 391px;  
   margin: 2px;
 }
 
@@ -321,7 +326,7 @@ button:focus-visible {
 
 .content__card-link_current {
   display: block;
-  inline-size: 100%;
+  inline-size: 391px;
   block-size: 100%;
   background-color: #545050;
 }  
@@ -343,7 +348,6 @@ button:focus-visible {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 3px 0 3px 3px;
   block-size: 100%;
 }
 
@@ -353,6 +357,7 @@ button:focus-visible {
   gap: 4px;
   block-size: 100%;
   inline-size: 200px;
+  padding: 2px;
 }
 
 .content__video-card-title {
@@ -376,15 +381,15 @@ button:focus-visible {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  padding: 2px;
 }
 
 .content__video-card-thumbnail {
-  inline-size: 194px;
+  inline-size: 198px;
   block-size: 100%;
 }
 
 .more-button {
-  inline-size: 399px;
+  inline-size: 391px;
   block-size: 34px;
-  margin: 2px 0 0 2px;
 }
